# pydantic-mongodb-validator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pydantic_mongodb_validator/: generator.py
src/pydantic_mongodb_validator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_generator.py
