[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-mongodb-validator"
version = "0.1.0"
description = "A utility to convert Pydantic models into MongoDB $jsonSchema validators."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["pydantic", "mongodb", "jsonschema", "validation", "odm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pymongo>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]